@@ -1,3 +1,9 @@
+2004-10-15  Alan Modra  <amodra@bigpond.net.au>
+
+	* config.bfd: Whitespace cleanup.
+	* Makefile.am: Run "make dep-am"
+	* Makefile.in: Regenerate.
+
 2004-10-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* elflink.c (struct already_linked_section): Removed.
